updated so that it works on linux and mac os workstation

--- a/resources/boto.j2
+++ b/resources/boto.j2
@@ -1,4 +1,4 @@
 [Credentials]
-aws_access_key_id = {{ aws_access_key_id }}
-aws_secret_access_key = {{ aws_secret_access_key }}
-ec2_region_name = {{ secure_aws_region }}
+aws_access_key_id = {{ aws_access_key }}
+aws_secret_access_key = {{ aws_secret_key }}
+ec2_region_name = {{ aws_region }}
