--- a/resources/ansible.cfg.j2
+++ b/resources/ansible.cfg.j2
@@ -1,7 +1,7 @@
 [defaults]
-hostfile = {{ ansible_config }}/inventory/vz-edge-1701-aio
-fact_caching_connection = {{ ansible_config }}/tmp/cache/vz-edge-1701-aio
-log_path = {{ ansible_config }}/tmp/logs/vz-edge-1701-aio.log
+hostfile = {{ ansible_config }}/inventory/
+fact_caching_connection = {{ ansible_config }}/tmp/cache/
+log_path = {{ ansible_config }}/tmp/logs/
 
 remote_user = {{ username }}
 private_key_file = ~/.ssh/id_rsa
