--- a/resources/ansible.cfg.j2
+++ b/resources/ansible.cfg.j2
@@ -1,7 +1,7 @@
 [defaults]
 hostfile = {{ ansible_config }}/inventory/
-fact_caching_connection = {{ ansible_config }}/tmp/cache/
-log_path = {{ ansible_config }}/tmp/logs/ansible-default.log
+fact_caching_connection = {{ ansible_config }}/tmp/
+log_path = {{ ansible_config }}/tmp/ansible-default.log
 
 # remote_user = {{ username }}
 # private_key_file = ~/.ssh/id_rsa
