--- a/resources/ansible.cfg.j2
+++ b/resources/ansible.cfg.j2
@@ -1,14 +1,14 @@
 [defaults]
-hostfile = {{ ansible_config }}/inventory/
-fact_caching_connection = {{ ansible_config }}/tmp/
-log_path = {{ ansible_config }}/tmp/ansible-default.log
+hostfile = {{ workspace_dir }}/inventory/
+fact_caching_connection = {{ workspace_dir }}/tmp/
+log_path = {{ workspace_dir }}/tmp/ansible-default.log
 
-# remote_user = {{ username }}
-# private_key_file = ~/.ssh/id_rsa
+remote_user = {{ username }}
+private_key_file = ~/.ssh/id_rsa
 
-roles_path = {{ ansible_config }}/roles
-local_tmp = {{ ansible_config }}/tmp
-library = {{ ansible_config }}/library/
+roles_path = {{ workspace_dir }}/roles
+local_tmp = {{ workspace_dir }}/tmp
+library = {{ workspace_dir }}/library/
 
 host_key_checking = false
 forks = 10
