--- a/setup/archive/resources/ansible.cfg.j2
+++ b/setup/archive/resources/ansible.cfg.j2
@@ -10,7 +10,7 @@ roles_path = {{ workspace_dir }}/roles
 local_tmp = {{ workspace_dir }}/tmp
 library = {{ workspace_dir }}/library/
 
-host_key_checking = false
+host_key_checking = False
 forks = 10
 retry_files_enabled = False
 
